public class CargoPlane {
}
