public class PassengerPlane {
}
