public class TowerMediator {
}
